# COMP2012H_Project

./: .gitignore  CMakeLists.txt  README.md  build_console_win64.bat  temp_how_to_display
build-cinf_gui-Desktop_Qt_5_15_0_clang_64bit-Debug/: Makefile  moc_begin_widget.cpp  moc_input_key.cpp  moc_manual_window.cpp  moc_show_capture.cpp  moc_solution_widget.cpp  moc_window_capture.cpp  qrc_res.cpp  ui_begin_widget.h  ui_input_key.h  ui_manual_window.h  ui_show_capture.h  ui_solution_widget.h
build-cinf_gui-Desktop_Qt_5_9_9_MSVC2015_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_begin_widget.h  ui_input_key.h  ui_show_capture.h  ui_solution_widget.h
build-cinf_gui-Desktop_Qt_5_9_9_MSVC2015_64bit-Debug/debug/: moc_begin_widget.cpp  moc_input_key.cpp  moc_show_capture.cpp  moc_solution_widget.cpp  moc_window_capture.cpp  qrc_res.cpp
gui/: begin_widget.cpp  begin_widget.h  begin_widget.ui  cinf_gui.pro  cinf_gui.pro.user.47fd988  input_key.cpp  input_key.h  input_key.ui  main.cpp  manual_window.cpp  manual_window.h  manual_window.ui  matrixchooserdialog.cpp  matrixchooserdialog.h  matrixchooserdialog.ui  res.qrc  show_capture.cpp  show_capture.h  show_capture.ui  solution_widget.cpp  solution_widget.h  solution_widget.ui  window_capture.cpp  window_capture.h
libraries/gmp-6.2.0/: Makefile  config.h  config.m4  config.status  gmp.h  gmp.pc  gmpxx.pc  libgmpxx.la  libtool
libraries/gmp_621_msvc_x64/: gmp.h  libgmp.lib
sources/: console.cpp  console.h  debug.h  debug_stress_test.h  main.cpp  makefile  makefile_osx
sources/build-cinf_gui-Desktop_Qt_5_9_9_MSVC2015_64bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_show_capture.h  ui_solution_widget.h
sources/gui/: begin_widget.cpp  begin_widget.h  cinf_gui.pro  dialog_key.cpp  dialog_key.h  dialog_key.ui  input_key.h  show_capture.cpp  show_capture.h  show_capture.ui  (+3 more)
sources/math/: CMakeLists.txt  Field.cpp  Field.h  R.cpp  R.h  Ring.cpp  Ring.h  documentation.md  test.cpp  test.h  tools.cpp  tools.h
sources/math/double/: Double.cpp  Double.h  DoubleComplex.cpp  DoubleComplex.h
sources/math/finite_field/: ModField.cpp  ModField.h
sources/math/fraction/: Fraction.cpp  Fraction.h
sources/math/linear/: CoupledOperations.cpp  CoupledOperations.h  LinOpsSteps.cpp  LinOpsSteps.h  LinearOperations.cpp  LinearOperations.h  README.md
sources/math/long/: Long.cpp  Long.h  LongComplex.cpp  LongComplex.h  LongType.h  mpz_wrapper.cpp  mpz_wrapper.h
sources/math/polynomial/: FastMultinomial.h  Polynomial.cpp  Polynomial.h
(+63 files in other folders)
